--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@fontsource/outfit": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
+    "chart.js": "^4.5.0",
     "moment": "^2.30.1",
     "moment-business-days": "^1.2.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
